force-app/main/default/objects/Board_Meeting_Attendance__c/Board_Meeting_Attendance__c.object-meta.xml
<CustomObject>
    <description>Records that a board member attended (or was expected at) a specific board meeting. Master-detail child of Board Membership Year so attendance rolls up per member per year to verify the "3 of 4" requirement. JSI-123 Board Tracking. Author: Jason Ott.</description>
    <label>Board Meeting Attendance</label>
    <nameField>
        <displayFormat>BMA-{00000}</displayFormat>
        <label>Attendance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Board Meeting Attendance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>