force-app/main/default/objects/Board_Meeting_Attendance__c/fields/Attendance_Key__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Key__c</fullName>
    <description>Dedupe backstop = Board Meeting Id + '|' + Board Membership Year Id. Unique, case-insensitive. Stamped by a before-save flow. JSI-123 / Jason Ott.</description>
    <externalId>true</externalId>
    <label>Attendance Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>