force-app/main/default/objects/Board_Meeting_Attendance__c/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <description>TRUE if the member attended. Only attended records count toward the 3-of-4 requirement (lets you also record an expected-but-absent row). JSI-123 / Jason Ott.</description>
    <label>Attended</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>