force-app/main/default/objects/Board_Meeting_Attendance__c/fields/Board_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Board_Meeting__c</fullName>
    <description>The meeting attended. JSI-123 / Jason Ott.</description>
    <label>Board Meeting</label>
    <referenceTo>Board_Meeting__c</referenceTo>
    <relationshipLabel>Attendance</relationshipLabel>
    <relationshipName>Attendance</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
</CustomField>