force-app/main/default/objects/Board_Meeting_Attendance__c/fields/Board_Membership_Year__c.field-meta.xml
<CustomField>
    <fullName>Board_Membership_Year__c</fullName>
    <description>The member's year-of-service this attendance counts toward (drives the 3-of-4 roll-up). JSI-123 / Jason Ott.</description>
    <label>Board Membership Year</label>
    <referenceTo>Board_Membership_Year__c</referenceTo>
    <relationshipLabel>Attendance</relationshipLabel>
    <relationshipName>Attendance</relationshipName>
    <type>MasterDetail</type>
</CustomField>