force-app/main/default/objects/Board_Meeting_Attendance__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>The board member (denormalized for reporting). JSI-123 / Jason Ott.</description>
    <label>Board Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Board Meeting Attendance</relationshipLabel>
    <relationshipName>Board_Meeting_Attendance</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>